# crm-backend

./: .gitignore  README.md  ayoooooo  hello.py  pyproject.toml  requirements.txt
analytic/: admin.py  models.py  tests.py  urls.py  views.py
analytic/api/: serializers.py
cmsapp/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
cmsapp/api/: custom_funcs.py  serializers.py
cmsapp/migrations/: 0001_initial.py  0002_student_group.py  0003_auto_20230212_2111.py
core/: settings.py  urls.py
patches/: custom_funcs.py
templates/: reset_password.html
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/api/: custom_funcs.py  login_serializers.py  password_reset_serializers.py  password_reset_views.py  register_serializer.py  register_serializers.py  serializers.py  utils.py
users/migrations/: 0001_initial.py  0002_auto_20221217_1606.py  0003_profile.py
