[tool.poetry]
name = "crm-backend"
version = "0.1.0"
description = ""
authors = ["Nakadzima <pascal.german@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.16"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-decouple = "^3.7"
pillow = "^9.4.0"
django-cors-headers = "^3.13.0"
drf-yasg = "^1.21.4"
whitenoise = "^6.3.0"
django-filter = "^22.1"
dj-rest-auth = "^2.2.7"
pytz = "^2022.7.1"
django-jazzmin = "^2.6.0"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
cloudinary = "^1.32.0"
django-cloudinary-storage = "^0.3.0"
dropbox = "^11.36.0"
django-storages = "^1.13.2"
boto3 = "^1.26.99"
celery = "^5.2.7"
redis = "^4.5.4"
coverage = "^7.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
